[workspace]
members = [
    "tacticalmesh-link",
    "tacticalmesh-wire",
    "tacticalmesh-olsr",
    "tacticalmesh-app",
    "tacticalmesh-bin",
]
resolver = "2"

[workspace.dependencies]
bincode            = "1.3"
serde              = { version = "1", features = ["derive"] }
tokio              = { version = "1", features = ["full"] }
parking_lot        = "0.12"
anyhow             = "1"
thiserror          = "1"
tracing            = "0.1"
tracing-subscriber = "0.3"
blake3             = "1.5"
rand               = "0.8"
clap               = { version = "4", features = ["derive"] }
