[package]
name = "tacticalmesh-app"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
rand = "0.8"
image = { version = "0.24", default-features = false, features = ["jpeg"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
