[package]
name    = "tacticalmesh-olsr"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode           = { workspace = true }
serde             = { workspace = true }
tokio             = { workspace = true }
parking_lot       = { workspace = true }
anyhow            = { workspace = true }
thiserror         = { workspace = true }
tracing           = { workspace = true }
tacticalmesh-wire = { path = "../tacticalmesh-wire" }

[dev-dependencies]
tokio = { workspace = true }
