[package]
name = "tacticalmesh-wire"
version = "0.1.0"
edition = "2021"

[dependencies]
tacticalmesh-link = { path = "../tacticalmesh-link" }
ed25519-dalek     = { version = "2", features = ["rand_core"] }
chacha20          = { version = "0.9", features = [] }
reed-solomon-simd = "3"
blake3            = { workspace = true }
bincode           = { workspace = true }
serde             = { workspace = true }
rand              = "0.8"
parking_lot       = { workspace = true }
tokio             = { workspace = true }
anyhow            = { workspace = true }
thiserror         = { workspace = true }
tracing           = { workspace = true }
